--- a/week2/contactus.html
+++ b/week2/contactus.html
@@ -23,7 +23,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+            <a class="navbar-brand" href="./index.html"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -42,7 +42,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm">
+                <div class="col col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -55,26 +56,26 @@
                 <li class="breadcrumb-item active">Contact Us</li>
             </ol>
             <div class="col-12">
-               <h3>Contact Us</h3>
-               <hr>
+                <h3>Contact Us</h3>
+                <hr>
             </div>
         </div>
 
         <div class="row row-content">
-           <div class="col-12">
-              <h3>Location Information</h3>
-           </div>
+            <div class="col-12">
+                <h3>Location Information</h3>
+            </div>
             <div class="col-12 col-sm-4 offset-sm-1">
-                   <h5>Our Address</h5>
-                    <address style="font-size: 100%">
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope"></i>:
-                        <a href="mailto:confusion@food.net">confusion@food.net</a>
-		           </address>
+                <h5>Our Address</h5>
+                <address style="font-size: 100%">
+                    121, Clear Water Bay Road<br>
+                    Clear Water Bay, Kowloon<br>
+                    HONG KONG<br>
+                    <i class="fa fa-phone"></i>: +852 1234 5678<br>
+                    <i class="fa fa-fax"></i>: +852 8765 4321<br>
+                    <i class="fa fa-envelope"></i>:
+                    <a href="mailto:confusion@food.net">confusion@food.net</a>
+                </address>
             </div>
             <div class="col-12 col-sm-6 offset-sm-1">
                 <h5>Map of our Location</h5>
@@ -89,9 +90,9 @@
         </div>
 
         <div class="row row-content">
-           <div class="col-12">
-              <h3>Send us your Feedback</h3>
-           </div>
+            <div class="col-12">
+                <h3>Send us your Feedback</h3>
+            </div>
             <div class="col-12 col-md-9">
                 <form>
                     <div class="form-group row">
@@ -111,7 +112,7 @@
                         <div class="col-5 col-sm-4 col-md-3">
                             <div class="input-group">
                                 <div class="input-group-addon">(</div>
-                                    <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area code">
+                                <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area code">
                                 <div class="input-group-addon">)</div>
                             </div>
                         </div>
@@ -126,7 +127,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                       <div class="form-check col-md-6 offset-md-2">
+                        <div class="form-check col-md-6 offset-md-2">
                             <label class="form-check-label">
                                 <input type="checkbox" class="form-check-input" name="approve" value="">
                                 <strong>May we contact you?</strong>
@@ -152,9 +153,9 @@
                     </div>
                 </form>
             </div>
-             <div class="col-12 col-md">
+            <div class="col-12 col-md">
             </div>
-       </div>
+        </div>
 
     </div>
 
@@ -173,14 +174,14 @@
                 <div class="col-6 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope fa-lg"></i>:
-                      <a href="mailto:confusion@food.net">confusion@food.net</a>
-		           </address>
+                        121, Clear Water Bay Road<br>
+                        Clear Water Bay, Kowloon<br>
+                        HONG KONG<br>
+                        <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
+                        <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
+                        <i class="fa fa-envelope fa-lg"></i>:
+                        <a href="mailto:confusion@food.net">confusion@food.net</a>
+                    </address>
                 </div>
                 <div class="col-sm align-self-center">
                     <div style="text-align:center">
@@ -192,12 +193,12 @@
                         <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
-           </div>
-           <div class="row justify-content-center">
+            </div>
+            <div class="row justify-content-center">
                 <div class="col-auto">
                     <p>© Copyright 2015 Ristorante Con Fusion</p>
                 </div>
-           </div>
+            </div>
         </div>
     </footer>
 
