Assignment for week 3

--- a/week3/index.html
+++ b/week3/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a type="button" role="button" data-toggle="modal" data-target="#loginModal">
                         <span class="fa fa-sign-in"></span> Login</a>
                     </span>
                 </div>
@@ -84,12 +84,85 @@
                         <img src="img/logo.png" class="img-fluid">
                     </div>
                     <div class="col-12 col-sm align-self-center" style="text-align: center;">
-                        <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                            data-placement="bottom" href="#reservationForm" role="button">Reserve Table</a>
-                        </div>
+                        <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-target="#reservationFormModal" role="button">Reserve Table</a>
                     </div>
                 </div>
             </header>
+
+            <div id="reservationFormModal" class="modal fade" role="dialog">
+                <div class="modal-dialog modal-lg" role="content">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Reserve a table </h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group row">
+                                    <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
+                                    <div class="col-md-10">
+                                        <div class="btn-group" data-toggle="buttons">
+                                            <label class="btn btn-secondary active">
+                                                <input type="radio" name="nbPeople" value="1" autocomplete="off" checked> 1
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="nbPeople" value="2" autocomplete="off"> 2
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="nbPeople" value="3" autocomplete="off"> 3
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="nbPeople" value="4" autocomplete="off"> 4
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="nbPeople" value="5" autocomplete="off"> 5
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="nbPeople" value="6" autocomplete="off"> 6
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="section" class="col-md-2 col-form-label">Section</label>
+                                    <div class="col-md-4">
+                                        <div class="btn-group" data-toggle="buttons">
+                                          <label class="btn btn-success active">
+                                            <input type="radio" name="section" value="nonsmoking" autocomplete="off" checked> Non-Smoking
+                                          </label>
+                                          <label class="btn btn-danger">
+                                            <input type="radio" name="section" value="smoking" autocomplete="off"> Smoking
+                                          </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="lastname" class="col-md-2 col-form-label">Date and Time</label>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i></span>
+                                            <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
+                                            <input class="form-control" type="hour" name="hourBooking" value="" placeholder="Time">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-md-2 col-md-10">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                        <button type="submit" class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="container">
 
@@ -192,63 +265,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div id="reservationForm" class="row row-content align-items-center" >
-                            <div class="col-12 offset-0 col-md-8 offset-md-2">
-                                <div class="card">
-                                    <h3 class="card-header bg-warning text-white">Reserve a table</h3>
-                                    <div class="card-block">
-                                        <form>
-                                            <div class="form-group row">
-                                                <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
-                                                <div class="col-md-10">
-                                                    <div class="btn-group" data-toggle="buttons">
-                                                        <label class="btn btn-secondary active">
-                                                            <input type="radio" name="nbPeople" value="1" autocomplete="off" checked> 1
-                                                        </label>
-                                                        <label class="btn btn-secondary">
-                                                            <input type="radio" name="nbPeople" value="2" autocomplete="off"> 2
-                                                        </label>
-                                                        <label class="btn btn-secondary">
-                                                            <input type="radio" name="nbPeople" value="3" autocomplete="off"> 3
-                                                        </label>
-                                                        <label class="btn btn-secondary">
-                                                            <input type="radio" name="nbPeople" value="4" autocomplete="off"> 4
-                                                        </label>
-                                                        <label class="btn btn-secondary">
-                                                            <input type="radio" name="nbPeople" value="5" autocomplete="off"> 5
-                                                        </label>
-                                                        <label class="btn btn-secondary">
-                                                            <input type="radio" name="nbPeople" value="6" autocomplete="off"> 6
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="form-group row">
-                                                <label for="lastname" class="col-md-2 col-form-label">Date and Time</label>
-                                                <div class="col-md-4">
-                                                    <div class="input-group">
-                                                        <span class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i></span>
-                                                        <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-4">
-                                                    <div class="input-group">
-                                                        <span class="input-group-addon"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
-                                                        <input class="form-control" type="hour" name="hourBooking" value="" placeholder="Time">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="form-group row">
-                                                <div class="offset-md-2 col-md-10">
-                                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
 
                     <footer class="footer">
@@ -297,12 +313,6 @@
                     <script src="node_modules/jquery/dist/jquery.min.js"></script>
                     <script src="node_modules/tether/dist/js/tether.min.js"></script>
                     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-                    <script>
-                    $(document).ready(function(){
-                        $('[data-toggle="tooltip"]').tooltip();
-                    });
-                    </script>
 
                 </body>
 
