--- a/week4/index.html
+++ b/week4/index.html
@@ -211,14 +211,9 @@
                                 <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                                     <span class="carousel-control-next-icon"></span>
                                 </a>
-                                <div class="btn-group" id="carouselButtons">
-                                    <button class="btn btn-danger btn-sm" id="carousel-pause">
-                                        <span class="fa fa-pause"></span>
-                                    </button>
-                                    <button class="btn btn-danger btn-sm" id="carousel-play">
-                                        <span class="fa fa-play"></span>
-                                    </button>
-                                </div>
+                                <button class="btn btn-danger btn-sm" id="carousel-button">
+                                    <span id="carousel-button-icon" class="fa fa-pause"></span>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -325,11 +320,17 @@
                     <script>
                         $(document).ready(function(){
                             $("#mycarousel").carousel( { interval: 2000 } );
-                            $("#carousel-pause").click(function(){
-                                $("#mycarousel").carousel('pause');
-                            });
-                            $("#carousel-play").click(function(){
-                                $("#mycarousel").carousel('cycle');
+                            $("#carousel-button").click(function(){
+                                if ($("#carousel-button").children("span").hasClass('fa-pause')) {
+                                    $("#mycarousel").carousel('pause');
+                                    $("#carousel-button").children("span").removeClass('fa-pause');
+                                    $("#carousel-button").children("span").addClass('fa-play');
+                                }
+                                else if ($("#carousel-button").children("span").hasClass('fa-play')){
+                                    $("#mycarousel").carousel('cycle');
+                                    $("#carousel-button").children("span").removeClass('fa-play');
+                                    $("#carousel-button").children("span").addClass('fa-pause');                    
+                                }
                             });
                         });
                     </script>
