Last assignment for week 4

--- a/week4/index.html
+++ b/week4/index.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a type="button" role="button" data-toggle="modal" data-target="#loginModal">
+                    <a id="buttonLogin" type="button" role="button">
                         <span class="fa fa-sign-in"></span> Login</a>
                     </span>
                 </div>
@@ -85,7 +85,7 @@
                         <img src="img/logo.png" class="img-fluid">
                     </div>
                     <div class="col-12 col-sm align-self-center" style="text-align: center;">
-                        <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-target="#reservationFormModal" role="button">Reserve Table</a>
+                        <a id="buttonReservation" type="button" class="btn btn-warning btn-sm btn-block" role="button">Reserve Table</a>
                     </div>
                 </div>
             </header>
@@ -318,7 +318,7 @@
                     <script src="node_modules/tether/dist/js/tether.min.js"></script>
                     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
                     <script src="js/scripts.js"></script>
-                    <!-- endbuild --> 
+                    <!-- endbuild -->
 
                 </body>
 
